--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
         }
     },
     "engines": {
-        "node": ">=18.15.0 <19.0.0 || ^20",
-        "pnpm": ">=9"
+        "node": ">=18.15.0 <19.0.0 || ^20"
     },
     "resolutions": {
         "@google/generative-ai": "^0.24.0",
